# llm-gateway

./: .dockerignore  .gitignore  CHANGELOG.md  CLAUDE.md  Cargo.toml  Dockerfile  README.md  config.toml  gateway.db
.claude/: settings.local.json
.github/: run.sh
.github/workflows/: ci.yml  dev-deploy.yml
crates/api/: Cargo.toml  build.rs
crates/api/src/: anthropic.rs  auth.rs  error.rs  extractors.rs  lib.rs  models.rs  openai.rs  proxy.rs  settlement.rs  workers.rs
crates/api/src/management/: accounts.rs  auth.rs  channel_models.rs  channels.rs  keys.rs  logs.rs  mod.rs  model_fallbacks.rs  models.rs  pricing_policies.rs  providers.rs  seed.rs  settings.rs  usage.rs  users.rs
crates/api/tests/: test_auth.rs  test_management_keys.rs  test_management_providers.rs  test_settings.rs  test_users.rs
crates/api/tests/common/: mod.rs
crates/audit/: Cargo.toml
crates/audit/src/: lib.rs
crates/auth/: Cargo.toml
crates/auth/src/: lib.rs
crates/billing/: Cargo.toml
crates/billing/src/: lib.rs  pricing.rs
crates/encryption/: Cargo.toml
crates/encryption/src/: lib.rs
crates/gateway/: Cargo.toml
crates/gateway/src/: main.rs
crates/provider/: Cargo.toml
crates/provider/src/: anthropic.rs  lib.rs  openai.rs
crates/ratelimit/: Cargo.toml
crates/ratelimit/src/: lib.rs
crates/storage/: Cargo.toml  build.rs  seed_providers.json
crates/storage/migrations/: 20260401000000_init.sql  20260401000001_users.sql  20260401000003_channels.sql  20260401000004_models_model_type.sql  20260414000000_add_channel_fields.sql  20260414000001_add_model_id.sql  20260414000002_create_channel_models.sql  20260415000000_pricing_policies.sql  20260415000000_provider_endpoints.sql  20260415000001_pricing_policies.sql  20260415000002_add_model_billing_type.sql  20260415000003_add_channel_model_billing_fields.sql  20260415000004_add_model_updated_at.sql  20260415000005_add_audit_log_stream.sql  20260416000000_fix_audit_status_code.sql
crates/storage/migrations/postgres/: 20260415000000_initial.sql  20260415000005_add_audit_log_stream.sql  20260416000000_fix_audit_status_code.sql  20260417000000_add_audit_model_override.sql  20260417000000_model_remove_provider_id.sql  20260419000000_upstream_model_nullable.sql  20260420000000_add_audit_request_upstream_url.sql  20260422000000_add_cache_read_prices_and_tokens.sql  20260423000000_channel_models_simplified_pricing.sql  20260425000000_add_audit_headers.sql  20260426000000_accounts_and_transactions.sql  20260427000000_add_provider_proxy_url.sql  20260428000000_add_user_id.sql  20260429000000_add_model_fallbacks.sql  20260430000000_add_cache_creation_tokens.sql  20260501000000_add_key_prefix.sql  20260502000000_monetary_integer_subunits.sql
crates/storage/migrations/sqlite/: 20260401000000_init.sql  20260417000000_add_audit_model_override.sql  20260417000000_model_remove_provider_id.sql  20260417000000_models_nullable_provider.sql  20260418000000_models_nullable_provider.sql  20260419000000_upstream_model_nullable.sql  20260420000000_add_audit_request_upstream_url.sql  20260422000000_add_cache_read_prices_and_tokens.sql  20260423000000_channel_models_simplified_pricing.sql  20260424000000_drop_model_enabled.sql  20260425000000_add_audit_headers.sql  20260426000000_accounts_and_transactions.sql  20260428000000_add_user_id.sql  20260429000000_add_model_fallbacks.sql  20260430000000_add_cache_creation_tokens.sql  20260502000000_monetary_integer_subunits.sql
crates/storage/src/: lib.rs  migrations.rs  money.rs  postgres.rs  seed.rs  sqlite.rs  types.rs
crates/storage/src/migrations/: init.sql
data/: gateway.db
deploy/develop/: dev-deploy.yml  docker-compose.yml
deploy/production/: .env.example  config.toml  docker-compose.yml
docs/: dev-deploy.md  git-flow.md
docs/superpowers/plans/: 2026-04-11-llm-gateway-backend.md  2026-04-11-llm-gateway-frontend.md  2026-04-12-auth-roles.md  2026-04-12-provider-channels.md  2026-04-13-frontend-refactor.md  2026-04-13-model-auto-discovery.md  2026-04-14-channel-enhancement.md  2026-04-14-channel-models.md  2026-04-14-provider-endpoints-migration.md  2026-04-14-system-settings-audit-config.md  2026-04-15-admin-api-prefix.md  2026-04-15-channel-model-billing-fields.md  2026-04-15-model-billing-type.md  2026-04-15-postgresql-support.md  2026-04-15-pricing-policies.md  2026-04-15-provider-form-drawer-endpoints.md  2026-04-15-seed-data.md  2026-04-17-audit-model-override.md  2026-04-17-model-provider-n:n.md  2026-04-19-proxy-hybrid-plan.md  2026-04-22-billing-account.md  2026-04-25-provider-proxy-field.md  2026-04-27-model-fallback.md  2026-04-27-user-id-denormalization.md  2026-04-29-monetary-integer-subunits.md
docs/superpowers/specs/: 2025-04-16-proxy-refactoring-design.md  2026-04-11-llm-gateway-design.md  2026-04-12-auth-roles-design.md  2026-04-15-seed-data-design.md  (+23 more)
web/: .gitignore  index.html  package-lock.json  package.json  playwright.config.ts  tailwind.config.ts  tsconfig.json  tsconfig.tsbuildinfo  vite.config.ts
web/e2e/: app.spec.ts
web/src/: App.tsx  main.tsx
web/test-results/: .last-run.json
(+89 files in other folders)
