[workspace]
resolver = "2"
members = [
    "crates/gateway",
    "crates/api",
    "crates/provider",
    "crates/auth",
    "crates/ratelimit",
    "crates/billing",
    "crates/audit",
    "crates/storage",
    "crates/encryption",
]

[workspace.dependencies]
tokio = { version = "1", features = ["full"] }
axum = "0.8"
reqwest = { version = "0.12", features = ["json", "stream"] }
sqlx = { version = "0.8", features = ["runtime-tokio", "sqlite", "postgres", "migrate", "derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
tracing = "0.1"
tracing-subscriber = "0.3"
uuid = { version = "1", features = ["v4"] }
chrono = { version = "0.4", features = ["serde"] }
sha2 = "0.10"
hex = "0.4"
thiserror = "2"
async-trait = "0.1"
tower = "0.5"
hyper = "1"
llm-gateway-encryption = { path = "crates/encryption" }
