[package]
name = "llm-gateway-api"
version = "0.9.5"
edition = "2021"

[dependencies]
axum = { workspace = true }
llm-gateway-storage = { path = "../storage" }
llm-gateway-auth = { path = "../auth" }
llm-gateway-provider = { path = "../provider" }
llm-gateway-billing = { path = "../billing" }
llm-gateway-audit = { path = "../audit" }
llm-gateway-ratelimit = { path = "../ratelimit" }
llm-gateway-encryption = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
tower = { workspace = true }
hyper = { workspace = true }
reqwest = { workspace = true }
arc-swap = "1"
async-trait = "0.1"
futures = "0.3"
tokio-stream = "0.1"
bytes = "1"
url = "2"

[dev-dependencies]
llm-gateway-storage = { path = "../storage" }
llm-gateway-audit = { path = "../audit" }
llm-gateway-ratelimit = { path = "../ratelimit" }
tower = { workspace = true }
hyper = { workspace = true }
serde_json = { workspace = true }
