[package]
name = "llm-gateway"
version = "0.1.0"
edition = "2021"

[dependencies]
llm-gateway-api = { path = "../api" }
llm-gateway-storage = { path = "../storage" }
llm-gateway-audit = { path = "../audit" }
llm-gateway-ratelimit = { path = "../ratelimit" }
tokio = { workspace = true }
axum = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
toml = { workspace = true }
serde = { workspace = true }
