[package]
name = "llm-gateway"
version = "0.8.0"
edition = "2021"

[dependencies]
llm-gateway-api = { path = "../api" }
llm-gateway-storage = { path = "../storage", features = ["sqlite", "postgres"] }
llm-gateway-audit = { path = "../audit" }
llm-gateway-ratelimit = { path = "../ratelimit" }
tokio = { workspace = true }
axum = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
toml = { workspace = true }
serde = { workspace = true }
tower = { workspace = true }
rust-embed = { version = "8", features = ["mime-guess"] }
mime_guess = "2"
sha2 = "0.10"
shellexpand = "3"
