[package]
name = "llm-gateway-storage"
version = "0.1.0"
edition = "2021"

[features]
default = ["sqlite"]
sqlite = []
postgres = []

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
chrono = { workspace = true }
uuid = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
async-trait = { workspace = true }

[dependencies.sqlx]
version = "0.8"
default-features = false
features = ["runtime-tokio-rustls"]
optional = true

[features]
sqlite = ["sqlx"]
postgres = ["sqlx"]

[dependencies.sqlite]
version = "0.8"
optional = true
default-features = false
features = ["runtime-tokio-rustls", "sqlite"]

[dependencies.postgres]
version = "0.8"
optional = true
default-features = false
features = ["runtime-tokio-rustls", "postgres"]