[package]
name = "llm-gateway-storage"
version = "0.9.5"
edition = "2021"

[features]
default = ["sqlite"]
sqlite = []
postgres = []

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
chrono = { workspace = true }
uuid = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
async-trait = { workspace = true }
sqlx = { workspace = true }